--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+    id 'maven-publish'
+    id 'kotlin-kapt'
+}
 
 def versionMajor = 0
 def versionMinor = 1
@@ -9,28 +12,30 @@ def versionPatch = 5
 def versionBuild = 0 // bump for dogfood builds, public betas, etc.
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    namespace 'org.yausername.dvd'
+
+    compileSdk 34
     defaultConfig {
-        applicationId "org.yausername.dvd"
-        minSdkVersion 21
-        //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 29
-        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
-        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
+        applicationId "abc.yausername.dvd2121"
+        minSdk 28
+        targetSdk 34
+        versionCode 1
+        versionName "1.0"
+//        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch * 100 + versionBuild
+//        versionName "${versionMajor}.${versionMinor}.${versionPatch}"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        kapt {
-            arguments {
-                arg("room.schemaLocation", "$projectDir/schemas")
-            }
-        }
-
-        ndk {
-            abiFilters = []
-            abiFilters.addAll(ABI_FILTERS.split(';').collect{it as String})
-        }
+//        kapt {
+//            arguments {
+//                arg("room.schemaLocation", "$projectDir/schemas")
+//            }
+//        }
+//
+//        ndk {
+//            abiFilters = []
+//            abiFilters.addAll(ABI_FILTERS.split(';').collect{it as String})
+//        }
     }
 
     buildTypes {
@@ -41,12 +46,20 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = JavaVersion.VERSION_11.toString()
+    }
+    viewBinding {
+        enabled = true
+    }
+
+    buildFeatures {
+        viewBinding true
+        buildConfig true
     }
 
     lintOptions {
@@ -54,35 +67,35 @@ android {
         checkReleaseBuilds false
     }
 
-    splits {
-        abi {
-            enable !project.hasProperty('noSplits')
-            reset()
-            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-            universalApk true
-        }
-    }
+//    splits {
+//        abi {
+//            enable !project.hasProperty('noSplits')
+//            reset()
+//            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+//            universalApk true
+//        }
+//    }
 
 }
 
 dependencies {
     def nav_version = "2.3.0-rc01"
     def material_version = "1.3.0-alpha01"
-    def room_version = "2.2.5"
-    def arch_lifecycle_version = "2.2.0"
-    def coroutines_version = "1.3.4"
-    def work_version = "2.3.4"
+    def room_version = "2.6.0"
+    def arch_lifecycle_version = "2.8.0"
+    def coroutines_version = "1.7.0"
+    def work_version = "2.7.1"
     def picassoVersion = "2.71828"
     def commonsIoVer = "2.5"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.9.10"
     // Kotlin components
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "com.google.android.material:material:$material_version"
@@ -100,16 +113,17 @@ dependencies {
 
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
-    implementation "com.github.yausername.youtubedl-android:library:3a0252d88b4ae573068c63c3d08fc52c66102d55"
-    implementation "com.github.yausername.youtubedl-android:ffmpeg:3a0252d88b4ae573068c63c3d08fc52c66102d55"
-
+//    implementation "com.github.junkfood02.youtubedl-android:library:0.17.1"
+    implementation 'io.github.junkfood02.youtubedl-android:ffmpeg:0.17.1'
+    implementation 'io.github.junkfood02.youtubedl-android:library:0.17.1'
+    implementation("io.github.junkfood02.youtubedl-android:aria2c:0.17.1") // o
     implementation "com.squareup.picasso:picasso:$picassoVersion"
 
     implementation group: 'commons-io', name: 'commons-io', version: "$commonsIoVer"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
